feat(bank): add bank base function for user