@@ -6,6 +6,7 @@ import com.questionbrushingplatform.common.resp.BaseResponse;
 import com.questionbrushingplatform.common.resp.ResponseCode;
 import com.questionbrushingplatform.dto.request.QuestionRequestDTO;
 import com.questionbrushingplatform.dto.response.QuestionResponseDTO;
+import com.questionbrushingplatform.dto.response.TagResponseDTO;
 import com.questionbrushingplatform.entity.Question;
 import com.questionbrushingplatform.entity.QuestionTagsMapping;
 import com.questionbrushingplatform.entity.Tag;
@@ -43,12 +44,13 @@ public class QuestionController {
     @ApiOperation("添加题目")
     @Transactional(rollbackFor = Exception.class)
     public BaseResponse<QuestionResponseDTO> addQuestion(@RequestBody QuestionRequestDTO questionDTO) {
-        Long questionId;
+        // check if the user id is equal to the login id
         if (StpUtil.getLoginIdAsLong() != Long.parseLong(questionDTO.getUserId())) {
             log.error("QuestionController.addQuestion error: user id {} is not equal to login id {}", questionDTO.getUserId(), StpUtil.getLoginIdAsLong());
             return new BaseResponse<>(ResponseCode.PARAMETER_ERROR);
         }
         try {
+            // convert QuestionRequestDTO to Question
             Question question = new Question();
             question.setTitle(questionDTO.getTitle());
             question.setContent(questionDTO.getContent());
@@ -56,16 +58,16 @@ public class QuestionController {
             question.setUserId(Long.valueOf(questionDTO.getUserId()));
             questionService.addQuestion(question);
             Question res = questionService.getQuestionByTitle(question.getTitle());
-            questionId = res.getId();
             // Convert List<String> to List<QuestionTagsMapping>
             List<QuestionTagsMapping> questionTagsMappings = questionDTO.getTags().stream()
                     .map(tagService::getTagById)
                     .map(tag -> new QuestionTagsMapping() {{
-                        setQuestionId(questionId);
+                        setQuestionId(res.getId());
                         setTagId(tag.getId());
                     }})
                     .collect(Collectors.toList());
-            questionTagsMappingService.addQuestionTagsMappings(questionTagsMappings);
+            questionTagsMappingService.updateQuestionTagsMapping(questionTagsMappings);
+            // return the added question
             QuestionResponseDTO questionResponseDTO = new QuestionResponseDTO();
             questionResponseDTO.setId(String.valueOf(res.getId()));
             questionResponseDTO.setTitle(res.getTitle());
@@ -74,7 +76,10 @@ public class QuestionController {
             questionResponseDTO.setUserId(String.valueOf(res.getUserId()));
             questionResponseDTO.setTags(
                     questionTagsMappings.stream()
-                            .map(mapping -> tagService.getTagById(mapping.getTagId()))
+                            .map(mapping -> {
+                                Tag tag = tagService.getTagById(mapping.getTagId());
+                                return new TagResponseDTO(tag.getId(), tag.getName());
+                            })
                             .collect(Collectors.toList()));
             return new BaseResponse<>(ResponseCode.SUCCESS, questionResponseDTO);
         } catch (RuntimeException e) {
@@ -88,15 +93,16 @@ public class QuestionController {
     @Transactional(rollbackFor = Exception.class)
     public BaseResponse<String> deleteQuestion(@PathVariable String id) {
         try {
+            // delete the question and the mappings
             questionService.deleteQuestion(Long.valueOf(id));
             questionTagsMappingService.listQuestionTagsMappingsByQuestionId(Long.valueOf(id))
                     .forEach(mapping -> questionTagsMappingService.deleteQuestionTagsMapping(mapping.getId()));
+            log.info("QuestionController.deleteQuestion success: which question id is {}", id);
+            return new BaseResponse<>(ResponseCode.SUCCESS);
         } catch (RuntimeException e) {
             log.error("QuestionController.deleteQuestion error: which id is {}", id, e);
             return new BaseResponse<>(ResponseCode.SYSTEM_ERROR);
         }
-        log.info("QuestionController.deleteQuestion success: which question id is {}", id);
-        return new BaseResponse<>(ResponseCode.SUCCESS);
     }
 
     @PostMapping("/update/{id}")
@@ -117,14 +123,14 @@ public class QuestionController {
             // get the existing tag ids and the new tag ids
             List<Integer> existingTagIds = questionTagsMappingService.listQuestionTagsMappingsByQuestionId(id).stream()
                     .map(QuestionTagsMapping::getTagId)
-                    .collect(Collectors.toList());
+                    .toList();
 
             // get the new tag ids
             List<Integer> newTagIds = questionDTO.getTags().stream()
                     .distinct()
                     .map(tagService::getTagById)
                     .map(Tag::getId)
-                    .collect(Collectors.toList());
+                    .toList();
 
             // Delete mappings that are not in the new tag list
             existingTagIds.stream()
@@ -158,8 +164,11 @@ public class QuestionController {
             questionResponseDTO.setAnswer(questionDTO.getAnswer());
             questionResponseDTO.setUserId(questionDTO.getUserId());
             questionResponseDTO.setTags(
-                    questionTagsMappingService.listQuestionTagsMappingsByQuestionId(id).stream()
-                            .map(mapping -> tagService.getTagById(mapping.getTagId()))
+                    questionTagsMappings.stream()
+                            .map(mapping -> {
+                                Tag tag = tagService.getTagById(mapping.getTagId());
+                                return new TagResponseDTO(tag.getId(), tag.getName());
+                            })
                             .collect(Collectors.toList()));
             return new BaseResponse<>(ResponseCode.SUCCESS, questionResponseDTO);
         } catch (RuntimeException e) {
@@ -184,7 +193,10 @@ public class QuestionController {
         questionResponseDTO.setUserId(String.valueOf(question.getUserId()));
         questionResponseDTO.setTags(
                 questionTagsMappingService.listQuestionTagsMappingsByQuestionId(Long.valueOf(id)).stream()
-                        .map(mapping -> tagService.getTagById(mapping.getTagId()))
+                        .map(mapping -> {
+                            Tag tag = tagService.getTagById(mapping.getTagId());
+                            return new TagResponseDTO(tag.getId(), tag.getName());
+                        })
                         .collect(Collectors.toList()));
         log.info("QuestionController.getQuestion success: {}", questionResponseDTO);
         return new BaseResponse<>(ResponseCode.SUCCESS, questionResponseDTO);
@@ -205,7 +217,10 @@ public class QuestionController {
                     questionResponseDTO.setUserId(String.valueOf(question.getUserId()));
                     questionResponseDTO.setTags(
                             questionTagsMappingService.listQuestionTagsMappingsByQuestionId(question.getId()).stream()
-                                    .map(mapping -> tagService.getTagById(mapping.getTagId()))
+                                    .map(mapping -> {
+                                        Tag tag = tagService.getTagById(mapping.getTagId());
+                                        return new TagResponseDTO(tag.getId(), tag.getName());
+                                    })
                                     .collect(Collectors.toList()));
                     return questionResponseDTO;
                 })
